k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyapp
spec:
  type: ClusterIP
  selector:
    app: pyapp
  ports:
    - port: 80
      targetPort: 8080
