k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: pyapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pyapp
                port:
                  number: 80
